# backend

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: health.py  router.py
app/api/v1/: __init__.py  connect.py  merchants.py  payment_authorizations.py
app/auth/: __init__.py  api_keys.py  scopes.py
app/db/: supabase.py
app/mcp/: server.py
app/services/: __init__.py  buyer.py  checkout_store.py  commerce_discovery.py  dashboard_auth.py  key_issuer.py  merchant_registration.py  merchant_resolver.py  payment_authorizations.py  purchase_history.py  sdk_onboarding.py  ucp_client.py  usage_events.py  user_profile.py  wallet_orchestrator.py
docs/: PDR.md  plan.md
fixtures/: demo_seed_manifest.json  lithe_seed_manifest.json  multi_merchant_seed_manifest.json
scripts/: __init__.py  genko_mcp_stdio.py  genko_mcp_stdio_launcher.ps1  restart_demo_store.ps1  seed_demo.py  seed_lithe.py  seed_multi_merchant.py  smoke_test.py  validate_happy_path.ps1
tests/: test_api_keys.py  test_checkout_store.py  test_commerce_discovery.py  test_connect_services.py  test_cors.py  test_health.py  test_mcp_gateway.py  test_merchant_balance.py  test_merchant_resolver.py  test_payment_authorizations.py  test_purchase_history.py  test_seed_demo.py  test_ucp_client.py  test_user_profile.py  test_wallet_orchestrator.py
